tcalc_help_sources = [
  'index.page',
  'introduction.page',
  'eyepiecedata.page',
  'telescopedata.page',
  'resultsdata.page',
  'graphswindow.page',
  'ocularwindow.page',
  'prefsdialog.page',
  'objectdata.page',
  'legal.xml',
]

tcalc_help_media = [
  'figures/tcalc.png', 
  'figures/telescopedata.png',
  'figures/eyepiecedata.png',
]

gnome.yelp(
  meson.project_name(),
  sources: tcalc_help_sources,
  media: tcalc_help_media,
)
